# somleng-switch

./: .dockerignore  .env  .gitignore  .gitmodules  .rubocop.yml  .tool-versions  .travis.yml  DEPLOYMENT.md  Dockerfile  Dockerrun.aws.json  Gemfile  README.md  Rakefile  app.json  app.rb  config.ru  docker-compose.yml  docker-entrypoint.sh
.circleci/: config.yml
.ebextensions/: 00_packages.config
.github/: dependabot.yml
.github/workflows/: build.yml  build_test.yml  cleanup-packages.yml  client_gateway.yml  client_gateway2.yml  client_gateway_build.yml  client_gateway_deploy.yml  ecs_event_runner.yml  gateway_commons.yml  integration_tests.yml  media_proxy.yml  media_proxy_build.yml  media_proxy_deploy.yml  notify_test.yml  opensips.yml  opensips_scheduler_build.yml  opensips_scheduler_deploy.yml  public_gateway.yml  public_gateway_build.yml  public_gateway_deploy.yml  rating_engine.yml  rating_engine_build.yml  rating_engine_deploy.yml  registrar.yml  s3_mpeg.yml  s3_mpeg_build.yml  s3_mpeg_deploy.yml  s3_mpeg_tests.yml  switch.yml  (+6 more)
components/freeswitch/src/mod/mod_twilio_stream/: CMakeLists.txt
components/freeswitch/src/mod/mod_twilio_stream/include/: audio_pipe.hpp  base64.hpp  lws_glue.h  mod_twilio_stream.h  twilio_helper.hpp
components/freeswitch/src/mod/mod_twilio_stream/src/: audio_pipe.cpp  lws_glue.cpp  mod_twilio_stream.c  parser.cpp  twilio_helper.cpp
config/: adhearsion.rb  app_settings.rb  app_settings.yml  credentials.yml.enc  environment.rb  events.rb  routes.rb  shoryuken.yml  skylight.yml
docs/: DEPLOYMENT.md  GETTING_STARTED.md
lib/: adhearsion-twilio.rb  call_platform.rb  encrypted_credentials.rb  services.rb
script/: ahn
spec/: Dockerfile  spec_helper.rb
(+914 files in other folders)
